Fixing calendar layout problem loading import event

--- a/src/Web/WebGoogleClient/Client/src/calendar/components/sidebar/sidebar.scss
+++ b/src/Web/WebGoogleClient/Client/src/calendar/components/sidebar/sidebar.scss
@@ -82,12 +82,14 @@
         flex: 1 1;
     }
 }*/
-
-.e-calendar, .e-bigger.e-small .e-calendar {
-    max-width: 250px !important;
-    min-width: 240px !important;
-    padding: 0;
+#left-sidebar {
+    .e-calendar, .e-bigger.e-small .e-calendar {
+        max-width: 100% !important;
+        min-width: 240px !important;
+        padding: 0;
+    }
 }
+
 
 
 .logo-ext {
